--- a/packages/typechain/package.json
+++ b/packages/typechain/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typechain",
+  "name": "@xlabs-xyz/typechain",
   "description": "🔌 TypeScript bindings for Ethereum smartcontracts",
   "keywords": [
     "ethereum",
@@ -8,7 +8,7 @@
     "smartcontract",
     "blockchain"
   ],
-  "version": "8.3.2",
+  "version": "8.3.3",
   "license": "MIT",
   "repository": "https://github.com/ethereum-ts/Typechain",
   "main": "./dist/index.js",
