--- a/examples/hardhat-truffe-v5/package.json
+++ b/examples/hardhat-truffe-v5/package.json
@@ -27,7 +27,7 @@
     "hardhat": "^2.9.9",
     "ts-generator": "0.0.8",
     "ts-node": "^10.7.0",
-    "typechain": "workspace:^8.3.2",
+    "@xlabs-xyz/typechain": "workspace:^8.3.3",
     "typescript": "^4.9.5",
     "web3": "^1.3.4",
     "web3-core": "^1",
