--- a/packages/target-truffle-v5/package.json
+++ b/packages/target-truffle-v5/package.json
@@ -38,7 +38,7 @@
     "web3": "^1"
   },
   "devDependencies": {
-    "typechain": "workspace:^8.3.2",
+    "@xlabs-xyz/typechain": "workspace:^8.3.3",
     "@types/lodash": "^4.14.139",
     "web3-core": "^1",
     "web3-eth-contract": "^1",
