--- a/examples/ethers-v6/package.json
+++ b/examples/ethers-v6/package.json
@@ -10,7 +10,7 @@
     "typecheck": "pnpm generate-types && tsc --noEmit"
   },
   "devDependencies": {
-    "@typechain/ethers-v6": "workspace:^0.5.1",
+    "@xlabs-xyz/typechain-ethers-v6": "workspace:^0.5.1",
     "@types/bn.js": "^5.1.0",
     "ts-node": "^10.7.0",
     "@xlabs-xyz/typechain": "workspace:^8.3.4",
