--- a/examples/hardhat/package.json
+++ b/examples/hardhat/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.4",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-    "@typechain/ethers-v6": "workspace:^0.5.1",
+    "@xlabs-xyz/typechain-ethers-v6": "workspace:^0.5.1",
     "@typechain/hardhat": "workspace:^9.1.0",
     "@types/chai": "^4.2.15",
     "@types/chai-as-promised": "^7.1.3",
