--- a/packages/target-ethers-v6/package.json
+++ b/packages/target-ethers-v6/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@typechain/ethers-v6",
+  "name": "@xlabs-xyz/typechain-ethers-v6",
   "description": "🔌 TypeChain target for ethers-v6",
   "keywords": [
     "ethers",
